# cpp_rpc_impl

./: CMakeLists.txt  README.md  main.cpp
src/connectors/client/: HttpClientConnector.cpp  HttpClientConnector.h
src/connectors/server/: HttpServerConnector.cpp  HttpServerConnector.h
src/constant/: http_constants.h
src/dto/: Arithmetic.cpp  Arithmetic.h  LedColor.h
src/led_strip/: StripWrapper.cpp  StripWrapper.h  led_colors.h
src/service/: ArithmeticService.cpp  ArithmeticService.h  LedService.cpp  LedService.h
